@@ -1,5 +1,11 @@
 2019-10-21  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        Unreviewed. Mark some more WTF unit tests as slow for GTK and WPE
+
+        * TestWebKitAPI/glib/TestExpectations.json:
+
+2019-10-21  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         [GTK][WPE] Check we don't leak the WebKitWebContext in all tests
         https://bugs.webkit.org/show_bug.cgi?id=202981
 
